allowTCP8080.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tcp-8080-ingress
spec:
  podSelector: {}
  ingress:
    - from:
      - ipBlock:
          cidr: 10.233.0.0/16
      ports:
        - protocol: TCP
          port: 8080
  policyTypes:
  - Ingress
