denyall.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {hello-7c6dfbdcd7-kb28h}
  policyTypes:
  - Ingress
